# tansu

./: .envrc  .gitignore  .oxlintrc.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  REFACTOR.md  SECURITY.md  TODO.md  bunfig.toml  initial-plan.md  knip.json  knip.jsonc  oxlint.config.mjs  package.json  plan.md  pnpm-lock.yaml  tansu.service  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
benches/: index.rs
docs/: SEARCH.md  SECURITY.md  frontend-architecture.md  md-wysiwyg-architecture.md  offline-resilience.md
scripts/: build-web.mjs  make-deb.sh
src/: api_types.rs  crypto.rs  filenames.rs  frontmatter.rs  http.rs  index.rs  lib.rs  main.rs  merge.rs  revisions.rs  scanner.rs  settings.rs  strip.rs  tags.rs  util.rs  watcher.rs
web/: index.html
web/static/: app.js  editor.css  globals.css  style.css
web/ts/: ARCHITECTURE.md  DiffView.tsx  alert-dialog.test.tsx  alert-dialog.tsx  api.generated.ts  api.test.ts  api.ts  app-boot.ts  app-commands.ts  app-runtime.ts  app.test.ts  app.tsx  architecture.test.ts  autocomplete.test.ts  autocomplete.ts  backlinks.test.ts  backlinks.ts  backlinks.tsx  bootstrap.test.ts  bootstrap.ts  command-registry.test.ts  command-registry.ts  commands.ts  component-test-helper.test.tsx  component-test-helper.tsx  conflict-banner-view.tsx  conflict.test.ts  conflict.ts  conflict.tsx  constants.ts  context-menu-view.tsx  context-menu.module.css  context-menu.test.ts  context-menu.ts  context-menu.tsx  dialog.module.css  diff-view.tsx  diff.test.ts  diff.ts  editor-action-bus.ts  (+113 more)
web/ts/e2e/: autocomplete.test.ts  editor.test.ts  firefox-regressions.test.ts  fuzz-editor.test.ts  global-setup.ts  import-html.test.ts  multi-tab-vault-isolation.test.ts  new-file-save.test.ts  save.test.ts  setup.ts  shortcuts.test.ts  sse-stability.test.ts  tabs.test.ts  transforms.test.ts  webkit-regressions.test.ts
web/ts/features/editor/: content.ts  display-state.ts  note-editor.test.tsx  note-editor.tsx  source-mode.ts
web/ts/features/sync/: connection-state.ts
web/ts/fixtures/: import-article.html
