[package]
name = "tansu"
version = "0.1.0"
edition = "2024"

[dependencies]
httparse = "1"
tantivy = { version = "0.25", default-features = false, features = ["mmap", "lz4-compression"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.12", default-features = false }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
