[package]
name = "tansu"
version = "0.1.0"
edition = "2024"

[dependencies]
httparse = "1"
tantivy = { version = "0.25", default-features = false, features = ["mmap", "lz4-compression"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.12", default-features = false }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
base64 = "0.22"
subtle = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "index"
harness = false

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
